2017-08-18  Tom Tromey  <tom@tromey.com>

	* runtest.exp: Fix --directory matching.

2017-08-15  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (xml_tag): New proc.
	(log_summary): Use it.
	(record_test): Likewise.

2017-08-15  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (open_logs): Set .xml filename correctly.
	* runtest.exp: Remove xml_file_name var.
	(usage): Update --xml option to not take an argument.
	(load_tool_init): Likewise.
	* doc/dejagnu.texi (Invoking runtest): Update documentation.
	* doc/runtest.1: Likewise.

2017-08-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Improve --strace message.

2017-08-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): --reboot doesn't take a 'name' parameter.

2017-06-04  Ben Elliston  <bje@gnu.org>

	* lib/target.exp (push_target): Remove unnecessary global command.
	* testsuite/runtest.all/target.test: Overhaul tests.

2017-06-04  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/remote.test: Remove cruft from yesteryear.

2017-06-04  Tom de Vries  <tom@codesourcery.com>

	* testsuite/runtest.all/target.test: Remove list_targets test.

2017-06-04  Tom de Vries  <tom@codesourcery.com>

	* testsuite/runtest.all/libs.exp (process_test): Dump entire
	output when there's no reportable output.
	* testsuite/runtest.all/remote.test (load_lib): New proc.
	* testsuite/runtest.all/target.test (load_lib): Same.

2017-03-11  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* lib/remote.exp (remote_download): Add logging message when
	source and destination file differ in name.

2016-09-04  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* runtest.exp: Set CCACHE_DISABLE, clear CCACHE_NODISABLE.

2016-06-28  Ben Elliston  <bje@gnu.org>

	* aclocal.m4, Makefile.in: Regenerate with automake 1.15.
	* configure: Regenerate.

2016-06-22  Bernhard Reutner-Fischer  <rep.dot.nop@gmail.com>

	* configure.ac, dejagnu.h, runtest, runtest.exp,
	baseboards/am33_2.0-libremote.exp, baseboards/androideabi.exp,